# mimir

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  libathena.version  mimir.pc.in
CMake/: mimir-config-version.cmake.in  mimir-config.cmake.build.in  mimir-config.cmake.install.in
include/athena/api/: interceptor.h  mpi.h  posix.h  stdio.h
include/mimir/: common.h  constant.h  macro.h  mimir.h  typedef.h
include/mimir/advice/: advice.h  advice_handler.h  advice_type.h  application_advice.h  config.h  dataset_advice.h  execution_engine_advice.h  file_advice.h  file_operation_advice.h  hlio_advice.h  io_phase_advice.h  job_configuration_advice.h  middleware_advice.h  no_advice.h  node_local_advice.h  posix_file_operation_advice.h  sample_advice.h  shared_storage_advice.h  workflow_advice.h
include/mimir/api/: application.h  job_configuration.h  mimir_interceptor.h  posix.h  workflow.h
include/mimir/common/: data_structure.h  debug.h  enumeration.h  error_code.h  typedef.h
include/mimir/log/: logger.h
scripts/: run_optimization.sub  run_optimization_script.sh  run_performance.sub
src/athena/api/: interceptor.cpp  mpi.cpp
src/athena/client/: athena_client.cpp  athena_client.h  posix_athena_client.cpp  posix_athena_client.h
src/athena/mimir_adapter/advice/: advice_handler.cpp  advice_handler.h
src/athena/mimir_adapter/api/: posix.cpp  stdio.cpp
src/athena/server/: athena_server.cpp  athena_server.h  posix_io.cpp  posix_io.h
src/mimir/advice/: advice.cpp  advice_handler.h
src/mimir/api/: application.cpp  job_configuration.cpp  mimir_interceptor.cpp  posix.cpp  workflow.cpp
src/mimir/common/: debug.cpp
src/mimir/core/: advice.cpp  advice.h  advice_handler.cpp  advice_handler.h
src/mimir/log/: logger.cpp  logger.h
test/: CMakeLists.txt  catch_config.h  test_utils.h
test/advice/: CMakeLists.txt  advice_generator_test.cpp
test/paper/: CMakeLists.txt  conf.json  mimir_test.cpp
test/posix/: CMakeLists.txt  pegasus.cpp  pegasus_mpi.cpp  posix_basic_test.cpp  posix_gcc_test.cpp  test1.cpp
test/posix/pegasus/: pmc_wrapper.sh  workflow.py
test/posix/pegasus/pegasus/: create_workflow.sh
test/posix/pegasus/pegasus_athena/: clear.sh  create_workflow.sh
test/stdio/: CMakeLists.txt  pegasus_mpi.cpp  stdio_basic_test.cpp  stdio_gcc_test.cpp
test/stdio/pegasus/: pmc_wrapper.sh  requirements.txt  workflow.py
test/stdio/pegasus/athena/: create_workflow.sh
test/unit/: CMakeLists.txt  test1.cpp
